@@ -1,3 +1,7 @@
+2002-02-04  Dan Espen  <dane@mk.telcordia.com>
+
+	* mod_f2m_communication.html: Language fix.
+
 2002-02-03  olicha  <olivier.chapuis@free.fr>
 
 	* mod_f2m_communication.html:
